--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,9 +18,10 @@ const { title, description } = Astro.props
     <link rel="icon" href="/favicon.ico" />
     <title>{title}</title>
     {description && <meta name="description" content={description} />}
-    <meta name="generator" content={Astro.generator} />
   </head>
-  <body class="bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100 antialiased">
+  <body
+    class="bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100 antialiased"
+  >
     <slot />
   </body>
 </html>
