feat: add Noto Serif SC fallback for CJK title characters

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -75,7 +75,7 @@ function formatDate(date: Date) {
   }
 
   .prose h2 {
-    font-family: 'Newsreader', serif;
+    font-family: 'Newsreader', 'Noto Serif SC', serif;
     font-weight: 700;
     font-size: 1.5rem;
     color: var(--prose-heading);
@@ -85,7 +85,7 @@ function formatDate(date: Date) {
   }
 
   .prose h3 {
-    font-family: 'Newsreader', serif;
+    font-family: 'Newsreader', 'Noto Serif SC', serif;
     font-weight: 600;
     font-size: 1.2rem;
     color: var(--prose-heading);
