--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,7 +74,7 @@ const hreflangLangs = isMusingsPage
     {description && <meta name="twitter:description" content={description} />}
     <meta name="twitter:image" content={ogImage} />
 
-    <link rel="alternate" type="application/rss+xml" title="Kevin Deng" href={new URL('/rss.xml', site).href} />
+    <link rel="alternate" type="application/rss+xml" title={lang === 'zh' ? '智子' : 'Kevin Deng'} href={new URL(lang === 'zh' ? '/zh/rss.xml' : '/rss.xml', site).href} />
 
     <slot name="head" />
     <script defer data-domain="sxzz.dev" src="https://analytics.sxzz.dev/js/script.js"></script>
