--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -2,9 +2,13 @@
 import PostDetailPage from '../../components/pages/PostDetail.astro'
 import { defaultLang } from '../../i18n/ui'
 import { getLangFromUrl } from '../../i18n/utils'
-import { getAvailableLangsForPost, getPostPaths, getPostSlug } from '../../utils/content'
+import {
+  getAvailableLangsForPost,
+  getPostPaths,
+  getPostSlug,
+} from '../../utils/content'
 
-export async function getStaticPaths() {
+export function getStaticPaths() {
   return getPostPaths(defaultLang)
 }
 
